<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graiet_bacground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".RegisterActivity">

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/username"
                android:ems="10"
                android:hint="@string/enter_first_name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/username"
                android:ems="10"
                android:hint="@string/enter_last_name"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_firstname" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/email"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/input_background"
                android:drawableStart="@drawable/password"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/input_background"
                android:onClick="goToMainView"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/input_background"
                android:onClick="goBack"
                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/back3"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:background="@drawable/createnew"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,HardcodedText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

